Fixed issue with spacing above panels

--- a/app/assets/stylesheets/users.css.scss
+++ b/app/assets/stylesheets/users.css.scss
@@ -11,6 +11,10 @@
   z-index: 100;
 }
 
-#users.panel-default {
+.panel-default {
   margin-top: 30px;
+}
+
+.note-toolbar-wrapper.panel-default {
+  margin-top: 0;
 }
